<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="0.88"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.88">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<org.opencv.javacv.facerecognition.CameraView
					android:id="@+id/tutorial3_activity_java_surface_view"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="0.88" />

				<ImageView
					android:id="@+id/imageView1"
					android:layout_width="120dp"
					android:layout_height="140dp"
					android:src="@drawable/recognition" />

			</LinearLayout>

		</RelativeLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">



		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:weightSum="100">

			<Button
				android:id="@+id/buttonCat"
				android:layout_width="0dp"
				android:layout_weight="10"
				android:layout_height="match_parent"
				android:text="@string/SViewAll" />

			<TextView
				android:id="@+id/textView1"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="40"
				android:text="@string/SFaceName"
				android:gravity="center_vertical"
				android:textAppearance="?android:attr/textAppearanceLarge" />

			<ToggleButton
				android:id="@+id/buttonBuscar"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:text="@string/SSearch"
				android:textOff="@string/SSearch"
				android:layout_weight="10"
				android:textOn="@string/SStopSearch" />

			<ImageButton
				android:id="@+id/imageButton1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="10"
				android:src="@drawable/ic_stat_camera" />

			<TextView
				android:id="@+id/textViewState"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="30"
				android:text="@string/SIdle"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>