<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.opencv.javacv.facerecognition.UpdateRecordForm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_record"
        android:textSize="26sp"
        android:gravity="center_horizontal|center_vertical"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>
    <ScrollView
        android:id="@+id/registration_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:gravity="center_vertical|center_horizontal">

                <ImageView
                    android:id="@+id/profiledp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_vertical|center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/selectimage"
                    android:layout_width="wrap_content"
                    android:text="Select Image"
                    android:layout_marginLeft="40sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:visibility="invisible"
                    android:background="@color/colorWhite"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/captureimage"
                    android:layout_width="wrap_content"
                    android:text="Capture Image"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:visibility="invisible"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:background="@color/colorWhite"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"/>
            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"/>
            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>
            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:textColor="@color/colorPrimaryDark" />


            <!--android:autofillHints="Select Gender"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/cnic"/>
            <EditText
                android:id="@+id/cnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Roleinorganization"/>
            <Spinner
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"/>
            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_no"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department"/>
            <Spinner
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:textColor="@color/colorPrimaryDark" />


            <!--android:autofillHints="Select Department"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joining_date"/>
            <EditText
                android:id="@+id/joiningdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"/>
            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"/>
            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"/>
            <Spinner
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"/>
            <Spinner
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zip_postal_code"/>
            <EditText
                android:id="@+id/zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPhonetic"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp">
                    <Button
                        android:id="@+id/update"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="Updation"
                        android:layout_gravity="center"
                        android:text="@string/update_record_text"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="50"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/delete"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="Deletion"
                        android:layout_gravity="center"
                        android:text="@string/delete_record"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
