<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="org.opencv.javacv.facerecognition.BackupAndRestore">

    <TextView
        android:layout_weight="1"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_and_restore"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backupbutton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/create_backup"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="15sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="15sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/restorebutton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="30sp"
                android:text="@string/restore_backup"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="30sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>